Add example for kafka-avro serialization using schema-registry