@@ -16,20 +16,19 @@ public class SimpleProducer {
         Properties props = new Properties();
         props.put("bootstrap.servers", "localhost:9092");
         props.put("acks", "all");
-        props.put("key.serializer", "org.apache.kafka.common.serialization.StringSerializer");
-        props.put("value.serializer", "org.apache.kafka.common.serialization.StringSerializer");
-        List<String> users = Arrays.asList("user1-other", "user2-other", "user-other");
-        List<String> updates = List.of("phone", "email", "status");
-        Producer<String, String> producer = new KafkaProducer<>(props);
+        props.setProperty("schema.registry.url", "http://localhost:8081");
+        props.setProperty("key.serializer", "org.apache.kafka.common.serialization.StringSerializer");
+        props.setProperty("value.serializer", "io.confluent.kafka.serializers.KafkaAvroSerializer");
+        List<String> users = Arrays.asList("user1", "user2", "user");
+        Producer<String, User> producer = new KafkaProducer<>(props);
         while (true) {
             producer.send(new ProducerRecord<>(
-                    "my-other-topic",
+                    "all-users",
                     users.get(ThreadLocalRandom.current().nextInt(users.size())),
-                    "{\"update\" : \"" +
-                            updates.get(ThreadLocalRandom.current().nextInt(updates.size())) +
-                            "\", \"value\": \""
-                            + UUID.randomUUID().toString() +
-            "\"}"
+                   User.newBuilder()
+                       .setName(UUID.randomUUID().toString())
+                       .setAge(ThreadLocalRandom.current().nextInt(99))
+                       .build()
             )
             );
             Thread.sleep(1000);
